--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,38 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
+    <title>
+        <Day-Planner></Day-Planner>
+    </title>
+</head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+<body>
+    <header class="jumbotron ">
+        <p id="dot"></p>
+        <h1 class="display-3">Day-Planner</h1>
+        <p class="lead">A simple calendar app for planning your day</p>
+        <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+    <section class="container ">
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">09:00</span>
+            <input type="text" class="form-control todoRow" id='9' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save9">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">10:00</span>
+            <input type="text" class="form-control todoRow" id='10' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save10">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">11:00</span>
+            <input type="text" class="form-control todoRow" id='11' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save11">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">12:00</span>
+            <input type="text" class="form-control todoRow" id='12' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save12">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">13:00</span>
+            <input type="text" class="form-control todoRow" id='13' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save13">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">14:00</span>
+            <input type="text" class="form-control todoRow" id='14' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save14">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">15:00</span>
+            <input type="text" class="form-control todoRow" id='15' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save15">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">16:00</span>
+            <input type="text" class="form-control todoRow" id='16' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save16">Save</button>
+        </div>
+        <div class="input-group input-group-lg">
+            <span class="input-group-text" id="inputGroup-sizing-lg">17:00</span>
+            <input type="text" class="form-control todoRow" id='17' aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-lg">
+            <button class="saveBtn" id="save17">Save</button>
+        </div>
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script src="./assets/js/script.js"></script>
+</body>
+
 </html>
